# elysium

./: Application.cpp  CMakeLists.txt  README.md  imgui.ini
Assets/: AssetCatalog.cpp
Audio/: SpatialAudioSystem.cpp  SpatialAudioSystem.hpp
Editor/: EditorViewport.cpp  EditorViewport.hpp
Foundation/: Subsystem.hpp  SubsystemManager.cpp
Networking/: NetworkingSystem.cpp  NetworkingSystem.hpp
Packaging/: ResourcePackager.cpp
Particles/: ParticleSystem.cpp  ParticleSystem.hpp
Physics/: PhysicsRuntimeSubsystem.cpp  PhysicsRuntimeSubsystem.hpp
Procedural/: ProceduralTileGenerator.cpp  ProceduralTileGenerator.hpp  ProceduralTileTypes.cpp  ProceduralTileTypes.hpp  TileSetGenerator.cpp  TileSetGenerator.hpp
Renderer/: Camera.hpp  Shader.hpp
Scene/: Scene.hpp  Transform.hpp
Tile/: TileMap.cpp
Walkmesh/: CharacterController.cpp
docs/: integration_phase_01.md
scripts/: bootstrap.ps1  bootstrap.sh  organize_assets.sh  package_resources.py  smoke_startup.sh  smoke_startup_gdb.sh
src/: Application.hpp  main.cpp
src/Assets/: AssetCatalog.hpp  GLTFLoader.cpp  GLTFLoader.hpp
src/Editor/: Theme.hpp
src/Foundation/: SubsystemManager.hpp
src/Packaging/: ResourcePackager.hpp
src/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp
src/Renderer/: Camera.cpp  Shader.cpp
src/Scene/: Scene.cpp
src/Scripting/: ScriptRuntimeSubsystem.cpp  ScriptRuntimeSubsystem.hpp  ScriptSystem.cpp  ScriptSystem.hpp
src/Tile/: TileMap.hpp
src/Walkmesh/: CharacterController.hpp  Walkmesh.cpp  Walkmesh.hpp
